--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,48 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-07-28 13:07:49 +0900 
+%% Created for Yuka Fujii at 2015-09-02 23:03:44 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{cumming2008,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2008PASP..120..531C},
+	Archiveprefix = {arXiv},
+	Author = {{Cumming}, A. and {Butler}, R.~P. and {Marcy}, G.~W. and {Vogt}, S.~S. and {Wright}, J.~T. and {Fischer}, D.~A.},
+	Date-Added = {2015-09-02 14:03:37 +0000},
+	Date-Modified = {2015-09-02 14:03:41 +0000},
+	Doi = {10.1086/588487},
+	Eprint = {0803.3357},
+	Journal = {\pasp},
+	Keywords = {Extrasolar Planets},
+	Month = may,
+	Pages = {531-554},
+	Title = {{The Keck Planet Search: Detectability and the Minimum Mass and Orbital Period Distribution of Extrasolar Planets}},
+	Volume = 120,
+	Year = 2008,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/588487}}
+
+@article{cassan2012,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2012Natur.481..167C},
+	Archiveprefix = {arXiv},
+	Author = {{Cassan}, A. and {Kubas}, D. and {Beaulieu}, J.-P. and {Dominik}, M. and {Horne}, K. and {Greenhill}, J. and {Wambsganss}, J. and {Menzies}, J. and {Williams}, A. and {J{\o}rgensen}, U.~G. and {Udalski}, A. and {Bennett}, D.~P. and {Albrow}, M.~D. and {Batista}, V. and {Brillant}, S. and {Caldwell}, J.~A.~R. and {Cole}, A. and {Coutures}, C. and {Cook}, K.~H. and {Dieters}, S. and {Prester}, D.~D. and {Donatowicz}, J. and {Fouqu{\'e}}, P. and {Hill}, K. and {Kains}, N. and {Kane}, S. and {Marquette}, J.-B. and {Martin}, R. and {Pollard}, K.~R. and {Sahu}, K.~C. and {Vinter}, C. and {Warren}, D. and {Watson}, B. and {Zub}, M. and {Sumi}, T. and {Szyma{\'n}ski}, M.~K. and {Kubiak}, M. and {Poleski}, R. and {Soszynski}, I. and {Ulaczyk}, K. and {Pietrzy{\'n}ski}, G. and {Wyrzykowski}, {\L}.},
+	Date-Added = {2015-09-02 14:02:42 +0000},
+	Date-Modified = {2015-09-02 14:02:50 +0000},
+	Doi = {10.1038/nature10684},
+	Eprint = {1202.0903},
+	Journal = {\nat},
+	Month = jan,
+	Pages = {167-169},
+	Primaryclass = {astro-ph.EP},
+	Title = {{One or more bound planets per Milky Way star from microlensing observations}},
+	Volume = 481,
+	Year = 2012,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/nature10684}}
 
 @article{stevens2005,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -110,19 +146,19 @@
 	Year = 1983,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1086/184154}}
 
-@ARTICLE{drake1986,
-   author = {{Drake}, S.~A. and {Linsky}, J.~L.},
-    title = "{Radio continuum emission from winds, chromospheres, and coronae of cool giants and supergiants}",
-  journal = {\aj},
- keywords = {Chromosphere, Giant Stars, Radio Emission, Stellar Coronas, Stellar Winds, Supergiant Stars, Centimeter Waves, Continuous Spectra, Cool Stars, Hertzsprung-Russell Diagram, Iue, Radio Sources (Astronomy)},
-     year = 1986,
-    month = mar,
-   volume = 91,
-    pages = {602-620},
-      doi = {10.1086/114043},
-   adsurl = {http://adsabs.harvard.edu/abs/1986AJ.....91..602D},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{drake1986,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1986AJ.....91..602D},
+	Author = {{Drake}, S.~A. and {Linsky}, J.~L.},
+	Doi = {10.1086/114043},
+	Journal = {\aj},
+	Keywords = {Chromosphere, Giant Stars, Radio Emission, Stellar Coronas, Stellar Winds, Supergiant Stars, Centimeter Waves, Continuous Spectra, Cool Stars, Hertzsprung-Russell Diagram, Iue, Radio Sources (Astronomy)},
+	Month = mar,
+	Pages = {602-620},
+	Title = {{Radio continuum emission from winds, chromospheres, and coronae of cool giants and supergiants}},
+	Volume = 91,
+	Year = 1986,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/114043}}
 
 @article{reffert2015,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -4285,37 +4321,35 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Title = {{Essential Radio Astronomy (Princeton Series in Modern Observational Astronomy)}},
 	Year = 2016}
 
-@ARTICLE{Condon2012,
-   author = {{Condon}, J.~J. and {Cotton}, W.~D. and {Fomalont}, E.~B. and 
-	{Kellermann}, K.~I. and {Miller}, N. and {Perley}, R.~A. and 
-	{Scott}, D. and {Vernstrom}, T. and {Wall}, J.~V.},
-    title = "{Resolving the Radio Source Background: Deeper Understanding through Confusion}",
-  journal = {\apj},
-archivePrefix = "arXiv",
-   eprint = {1207.2439},
- keywords = {cosmology: observations, diffuse radiation, galaxies: statistics, radio continuum: galaxies},
-     year = 2012,
-    month = oct,
-   volume = 758,
-      eid = {23},
-    pages = {23},
-      doi = {10.1088/0004-637X/758/1/23},
-   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...758...23C},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Condon2012,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...758...23C},
+	Archiveprefix = {arXiv},
+	Author = {{Condon}, J.~J. and {Cotton}, W.~D. and {Fomalont}, E.~B. and {Kellermann}, K.~I. and {Miller}, N. and {Perley}, R.~A. and {Scott}, D. and {Vernstrom}, T. and {Wall}, J.~V.},
+	Doi = {10.1088/0004-637X/758/1/23},
+	Eid = {23},
+	Eprint = {1207.2439},
+	Journal = {\apj},
+	Keywords = {cosmology: observations, diffuse radiation, galaxies: statistics, radio continuum: galaxies},
+	Month = oct,
+	Pages = {23},
+	Title = {{Resolving the Radio Source Background: Deeper Understanding through Confusion}},
+	Volume = 758,
+	Year = 2012,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/758/1/23}}
 
-@ARTICLE{Condon1974,
-   author = {{Condon}, J.~J.},
-    title = "{Confusion and Flux-Density Error Distributions}",
-  journal = {\apj},
-     year = 1974,
-    month = mar,
-   volume = 188,
-    pages = {279-286},
-      doi = {10.1086/152714},
-   adsurl = {http://adsabs.harvard.edu/abs/1974ApJ...188..279C},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Condon1974,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1974ApJ...188..279C},
+	Author = {{Condon}, J.~J.},
+	Doi = {10.1086/152714},
+	Journal = {\apj},
+	Month = mar,
+	Pages = {279-286},
+	Title = {{Confusion and Flux-Density Error Distributions}},
+	Volume = 188,
+	Year = 1974,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/152714}}
 
 @article{conrath+gautier2000,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -7986,26 +8020,22 @@ archivePrefix = "arXiv",
 	Year = 2008,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1117/12.789557}}
 
-@ARTICLE{Hicks2012,
-   author = {{Hicks}, B.~C. and {Paravastu-Dalal}, N. and {Stewart}, K.~P. and 
-	{Erickson}, W.~C. and {Ray}, P.~S. and {Kassim}, N.~E. and {Burns}, S. and 
-	{Clarke}, T. and {Schmitt}, H. and {Craig}, J. and {Hartman}, J. and 
-	{Weiler}, K.~W.},
-    title = "{A Wide-Band, Active Antenna System for Long Wavelength Radio Astronomy}",
-  journal = {\pasp},
-archivePrefix = "arXiv",
-   eprint = {1210.0506},
- primaryClass = "astro-ph.IM",
- keywords = {Astronomical Instrumentation},
-     year = 2012,
-    month = oct,
-   volume = 124,
-    pages = {1090-1104},
-      doi = {10.1086/668121},
-   adsurl = {http://adsabs.harvard.edu/abs/2012PASP..124.1090H},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
+@article{Hicks2012,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2012PASP..124.1090H},
+	Archiveprefix = {arXiv},
+	Author = {{Hicks}, B.~C. and {Paravastu-Dalal}, N. and {Stewart}, K.~P. and {Erickson}, W.~C. and {Ray}, P.~S. and {Kassim}, N.~E. and {Burns}, S. and {Clarke}, T. and {Schmitt}, H. and {Craig}, J. and {Hartman}, J. and {Weiler}, K.~W.},
+	Doi = {10.1086/668121},
+	Eprint = {1210.0506},
+	Journal = {\pasp},
+	Keywords = {Astronomical Instrumentation},
+	Month = oct,
+	Pages = {1090-1104},
+	Primaryclass = {astro-ph.IM},
+	Title = {{A Wide-Band, Active Antenna System for Long Wavelength Radio Astronomy}},
+	Volume = 124,
+	Year = 2012,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/668121}}
 
 @article{hinkley_et_al2011,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -9158,20 +9188,16 @@ archivePrefix = "arXiv",
 	Volume = 301,
 	Year = 2003}
 
-@ARTICLE{Kassim2015IAU,
-   author = {{Kassim}, N.~E. and {Clarke}, T. and {Helmboldt}, J. and {Ray}, P. and 
-	{Lane}, W. and {Polisensky}, E. and {Mroczkowski}, T. and {Deneva}, J. and 
-	{Hicks}, B. and {Hyman}, S.~D. and {Brisken}, W. and {Perley}, R. and 
-	{Owen}, F. and {Intema}, H.},
-    title = "{Low Frequencies on the NRAO VLA and the NRL VLA Low Band Ionospheric and Transient Experiment (VLITE)}",
-  journal = {IAU General Assembly},
-     year = 2015,
-    month = aug,
-   volume = 22,
-    pages = {53643},
-   adsurl = {http://adsabs.harvard.edu/abs/2015IAUGA..2253643K},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Kassim2015IAU,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2015IAUGA..2253643K},
+	Author = {{Kassim}, N.~E. and {Clarke}, T. and {Helmboldt}, J. and {Ray}, P. and {Lane}, W. and {Polisensky}, E. and {Mroczkowski}, T. and {Deneva}, J. and {Hicks}, B. and {Hyman}, S.~D. and {Brisken}, W. and {Perley}, R. and {Owen}, F. and {Intema}, H.},
+	Journal = {IAU General Assembly},
+	Month = aug,
+	Pages = {53643},
+	Title = {{Low Frequencies on the NRAO VLA and the NRL VLA Low Band Ionospheric and Transient Experiment (VLITE)}},
+	Volume = 22,
+	Year = 2015}
 
 @article{kasting+ackerman1986,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -14772,21 +14798,21 @@ archivePrefix = "arXiv",
 	Title = {{Tidal Decay and circularization of the orbits of Short-Period planets}},
 	Year = 2009}
 
-@ARTICLE{Rogers+Bowman2008,
-   author = {{Rogers}, A.~E.~E. and {Bowman}, J.~D.},
-    title = "{Spectral Index of the Diffuse Radio Background Measured from 100 to 200 MHz}",
-  journal = {\aj},
-archivePrefix = "arXiv",
-   eprint = {0806.2868},
- keywords = {Galaxy: general, radio continuum: general, techniques: spectroscopic},
-     year = 2008,
-    month = aug,
-   volume = 136,
-    pages = {641-648},
-      doi = {10.1088/0004-6256/136/2/641},
-   adsurl = {http://adsabs.harvard.edu/abs/2008AJ....136..641R},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Rogers+Bowman2008,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2008AJ....136..641R},
+	Archiveprefix = {arXiv},
+	Author = {{Rogers}, A.~E.~E. and {Bowman}, J.~D.},
+	Doi = {10.1088/0004-6256/136/2/641},
+	Eprint = {0806.2868},
+	Journal = {\aj},
+	Keywords = {Galaxy: general, radio continuum: general, techniques: spectroscopic},
+	Month = aug,
+	Pages = {641-648},
+	Title = {{Spectral Index of the Diffuse Radio Background Measured from 100 to 200 MHz}},
+	Volume = 136,
+	Year = 2008,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-6256/136/2/641}}
 
 @article{rogers+seager2010a,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -16272,23 +16298,22 @@ archivePrefix = "arXiv",
 	Year = 2003,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1016/S1631-0713(03)00009-9}}
 
-@ARTICLE{Stil2014,
-   author = {{Stil}, J.~M. and {Keller}, B.~W. and {George}, S.~J. and {Taylor}, A.~R.
-	},
-    title = "{Degree of Polarization and Source Counts of Faint Radio Sources from Stacking Polarized Intensity}",
-  journal = {\apj},
-archivePrefix = "arXiv",
-   eprint = {1404.1859},
- keywords = {galaxies: statistics, magnetic fields, methods: data analysis, polarization, radio continuum: galaxies},
-     year = 2014,
-    month = jun,
-   volume = 787,
-      eid = {99},
-    pages = {99},
-      doi = {10.1088/0004-637X/787/2/99},
-   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...787...99S},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Stil2014,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...787...99S},
+	Archiveprefix = {arXiv},
+	Author = {{Stil}, J.~M. and {Keller}, B.~W. and {George}, S.~J. and {Taylor}, A.~R.},
+	Doi = {10.1088/0004-637X/787/2/99},
+	Eid = {99},
+	Eprint = {1404.1859},
+	Journal = {\apj},
+	Keywords = {galaxies: statistics, magnetic fields, methods: data analysis, polarization, radio continuum: galaxies},
+	Month = jun,
+	Pages = {99},
+	Title = {{Degree of Polarization and Source Counts of Faint Radio Sources from Stacking Polarized Intensity}},
+	Volume = 787,
+	Year = 2014,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/787/2/99}}
 
 @article{stone1973,
 	Author = {{Stone}, P.~H.},
@@ -17138,77 +17163,23 @@ archivePrefix = "arXiv",
 	Year = 2012,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/755/1/42}}
 
-@ARTICLE{vanHaarlem2013,
-   author = {{van Haarlem}, M.~P. and {Wise}, M.~W. and {Gunst}, A.~W. and 
-	{Heald}, G. and {McKean}, J.~P. and {Hessels}, J.~W.~T. and 
-	{de Bruyn}, A.~G. and {Nijboer}, R. and {Swinbank}, J. and {Fallows}, R. and 
-	{Brentjens}, M. and {Nelles}, A. and {Beck}, R. and {Falcke}, H. and 
-	{Fender}, R. and {H{\"o}randel}, J. and {Koopmans}, L.~V.~E. and 
-	{Mann}, G. and {Miley}, G. and {R{\"o}ttgering}, H. and {Stappers}, B.~W. and 
-	{Wijers}, R.~A.~M.~J. and {Zaroubi}, S. and {van den Akker}, M. and 
-	{Alexov}, A. and {Anderson}, J. and {Anderson}, K. and {van Ardenne}, A. and 
-	{Arts}, M. and {Asgekar}, A. and {Avruch}, I.~M. and {Batejat}, F. and 
-	{B{\"a}hren}, L. and {Bell}, M.~E. and {Bell}, M.~R. and {van Bemmel}, I. and 
-	{Bennema}, P. and {Bentum}, M.~J. and {Bernardi}, G. and {Best}, P. and 
-	{B{\^i}rzan}, L. and {Bonafede}, A. and {Boonstra}, A.-J. and 
-	{Braun}, R. and {Bregman}, J. and {Breitling}, F. and {van de Brink}, R.~H. and 
-	{Broderick}, J. and {Broekema}, P.~C. and {Brouw}, W.~N. and 
-	{Br{\"u}ggen}, M. and {Butcher}, H.~R. and {van Cappellen}, W. and 
-	{Ciardi}, B. and {Coenen}, T. and {Conway}, J. and {Coolen}, A. and 
-	{Corstanje}, A. and {Damstra}, S. and {Davies}, O. and {Deller}, A.~T. and 
-	{Dettmar}, R.-J. and {van Diepen}, G. and {Dijkstra}, K. and 
-	{Donker}, P. and {Doorduin}, A. and {Dromer}, J. and {Drost}, M. and 
-	{van Duin}, A. and {Eisl{\"o}ffel}, J. and {van Enst}, J. and 
-	{Ferrari}, C. and {Frieswijk}, W. and {Gankema}, H. and {Garrett}, M.~A. and 
-	{de Gasperin}, F. and {Gerbers}, M. and {de Geus}, E. and {Grie{\ss}meier}, J.-M. and 
-	{Grit}, T. and {Gruppen}, P. and {Hamaker}, J.~P. and {Hassall}, T. and 
-	{Hoeft}, M. and {Holties}, H.~A. and {Horneffer}, A. and {van der Horst}, A. and 
-	{van Houwelingen}, A. and {Huijgen}, A. and {Iacobelli}, M. and 
-	{Intema}, H. and {Jackson}, N. and {Jelic}, V. and {de Jong}, A. and 
-	{Juette}, E. and {Kant}, D. and {Karastergiou}, A. and {Koers}, A. and 
-	{Kollen}, H. and {Kondratiev}, V.~I. and {Kooistra}, E. and 
-	{Koopman}, Y. and {Koster}, A. and {Kuniyoshi}, M. and {Kramer}, M. and 
-	{Kuper}, G. and {Lambropoulos}, P. and {Law}, C. and {van Leeuwen}, J. and 
-	{Lemaitre}, J. and {Loose}, M. and {Maat}, P. and {Macario}, G. and 
-	{Markoff}, S. and {Masters}, J. and {McFadden}, R.~A. and {McKay-Bukowski}, D. and 
-	{Meijering}, H. and {Meulman}, H. and {Mevius}, M. and {Middelberg}, E. and 
-	{Millenaar}, R. and {Miller-Jones}, J.~C.~A. and {Mohan}, R.~N. and 
-	{Mol}, J.~D. and {Morawietz}, J. and {Morganti}, R. and {Mulcahy}, D.~D. and 
-	{Mulder}, E. and {Munk}, H. and {Nieuwenhuis}, L. and {van Nieuwpoort}, R. and 
-	{Noordam}, J.~E. and {Norden}, M. and {Noutsos}, A. and {Offringa}, A.~R. and 
-	{Olofsson}, H. and {Omar}, A. and {Orr{\'u}}, E. and {Overeem}, R. and 
-	{Paas}, H. and {Pandey-Pommier}, M. and {Pandey}, V.~N. and 
-	{Pizzo}, R. and {Polatidis}, A. and {Rafferty}, D. and {Rawlings}, S. and 
-	{Reich}, W. and {de Reijer}, J.-P. and {Reitsma}, J. and {Renting}, G.~A. and 
-	{Riemers}, P. and {Rol}, E. and {Romein}, J.~W. and {Roosjen}, J. and 
-	{Ruiter}, M. and {Scaife}, A. and {van der Schaaf}, K. and {Scheers}, B. and 
-	{Schellart}, P. and {Schoenmakers}, A. and {Schoonderbeek}, G. and 
-	{Serylak}, M. and {Shulevski}, A. and {Sluman}, J. and {Smirnov}, O. and 
-	{Sobey}, C. and {Spreeuw}, H. and {Steinmetz}, M. and {Sterks}, C.~G.~M. and 
-	{Stiepel}, H.-J. and {Stuurwold}, K. and {Tagger}, M. and {Tang}, Y. and 
-	{Tasse}, C. and {Thomas}, I. and {Thoudam}, S. and {Toribio}, M.~C. and 
-	{van der Tol}, B. and {Usov}, O. and {van Veelen}, M. and {van der Veen}, A.-J. and 
-	{ter Veen}, S. and {Verbiest}, J.~P.~W. and {Vermeulen}, R. and 
-	{Vermaas}, N. and {Vocks}, C. and {Vogt}, C. and {de Vos}, M. and 
-	{van der Wal}, E. and {van Weeren}, R. and {Weggemans}, H. and 
-	{Weltevrede}, P. and {White}, S. and {Wijnholds}, S.~J. and 
-	{Wilhelmsson}, T. and {Wucknitz}, O. and {Yatawatta}, S. and 
-	{Zarka}, P. and {Zensus}, A. and {van Zwieten}, J.},
-    title = "{LOFAR: The LOw-Frequency ARray}",
-  journal = {\aap},
-archivePrefix = "arXiv",
-   eprint = {1305.3550},
- primaryClass = "astro-ph.IM",
- keywords = {instrumentation: interferometers, radio continuum: general, radio lines: general, dark ages, reionization, first stars, telescopes},
-     year = 2013,
-    month = aug,
-   volume = 556,
-      eid = {A2},
-    pages = {A2},
-      doi = {10.1051/0004-6361/201220873},
-   adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...556A...2V},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{vanHaarlem2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...556A...2V},
+	Archiveprefix = {arXiv},
+	Author = {{van Haarlem}, M.~P. and {Wise}, M.~W. and {Gunst}, A.~W. and {Heald}, G. and {McKean}, J.~P. and {Hessels}, J.~W.~T. and {de Bruyn}, A.~G. and {Nijboer}, R. and {Swinbank}, J. and {Fallows}, R. and {Brentjens}, M. and {Nelles}, A. and {Beck}, R. and {Falcke}, H. and {Fender}, R. and {H{\"o}randel}, J. and {Koopmans}, L.~V.~E. and {Mann}, G. and {Miley}, G. and {R{\"o}ttgering}, H. and {Stappers}, B.~W. and {Wijers}, R.~A.~M.~J. and {Zaroubi}, S. and {van den Akker}, M. and {Alexov}, A. and {Anderson}, J. and {Anderson}, K. and {van Ardenne}, A. and {Arts}, M. and {Asgekar}, A. and {Avruch}, I.~M. and {Batejat}, F. and {B{\"a}hren}, L. and {Bell}, M.~E. and {Bell}, M.~R. and {van Bemmel}, I. and {Bennema}, P. and {Bentum}, M.~J. and {Bernardi}, G. and {Best}, P. and {B{\^\i}rzan}, L. and {Bonafede}, A. and {Boonstra}, A.-J. and {Braun}, R. and {Bregman}, J. and {Breitling}, F. and {van de Brink}, R.~H. and {Broderick}, J. and {Broekema}, P.~C. and {Brouw}, W.~N. and {Br{\"u}ggen}, M. and {Butcher}, H.~R. and {van Cappellen}, W. and {Ciardi}, B. and {Coenen}, T. and {Conway}, J. and {Coolen}, A. and {Corstanje}, A. and {Damstra}, S. and {Davies}, O. and {Deller}, A.~T. and {Dettmar}, R.-J. and {van Diepen}, G. and {Dijkstra}, K. and {Donker}, P. and {Doorduin}, A. and {Dromer}, J. and {Drost}, M. and {van Duin}, A. and {Eisl{\"o}ffel}, J. and {van Enst}, J. and {Ferrari}, C. and {Frieswijk}, W. and {Gankema}, H. and {Garrett}, M.~A. and {de Gasperin}, F. and {Gerbers}, M. and {de Geus}, E. and {Grie{\ss}meier}, J.-M. and {Grit}, T. and {Gruppen}, P. and {Hamaker}, J.~P. and {Hassall}, T. and {Hoeft}, M. and {Holties}, H.~A. and {Horneffer}, A. and {van der Horst}, A. and {van Houwelingen}, A. and {Huijgen}, A. and {Iacobelli}, M. and {Intema}, H. and {Jackson}, N. and {Jelic}, V. and {de Jong}, A. and {Juette}, E. and {Kant}, D. and {Karastergiou}, A. and {Koers}, A. and {Kollen}, H. and {Kondratiev}, V.~I. and {Kooistra}, E. and {Koopman}, Y. and {Koster}, A. and {Kuniyoshi}, M. and {Kramer}, M. and {Kuper}, G. and {Lambropoulos}, P. and {Law}, C. and {van Leeuwen}, J. and {Lemaitre}, J. and {Loose}, M. and {Maat}, P. and {Macario}, G. and {Markoff}, S. and {Masters}, J. and {McFadden}, R.~A. and {McKay-Bukowski}, D. and {Meijering}, H. and {Meulman}, H. and {Mevius}, M. and {Middelberg}, E. and {Millenaar}, R. and {Miller-Jones}, J.~C.~A. and {Mohan}, R.~N. and {Mol}, J.~D. and {Morawietz}, J. and {Morganti}, R. and {Mulcahy}, D.~D. and {Mulder}, E. and {Munk}, H. and {Nieuwenhuis}, L. and {van Nieuwpoort}, R. and {Noordam}, J.~E. and {Norden}, M. and {Noutsos}, A. and {Offringa}, A.~R. and {Olofsson}, H. and {Omar}, A. and {Orr{\'u}}, E. and {Overeem}, R. and {Paas}, H. and {Pandey-Pommier}, M. and {Pandey}, V.~N. and {Pizzo}, R. and {Polatidis}, A. and {Rafferty}, D. and {Rawlings}, S. and {Reich}, W. and {de Reijer}, J.-P. and {Reitsma}, J. and {Renting}, G.~A. and {Riemers}, P. and {Rol}, E. and {Romein}, J.~W. and {Roosjen}, J. and {Ruiter}, M. and {Scaife}, A. and {van der Schaaf}, K. and {Scheers}, B. and {Schellart}, P. and {Schoenmakers}, A. and {Schoonderbeek}, G. and {Serylak}, M. and {Shulevski}, A. and {Sluman}, J. and {Smirnov}, O. and {Sobey}, C. and {Spreeuw}, H. and {Steinmetz}, M. and {Sterks}, C.~G.~M. and {Stiepel}, H.-J. and {Stuurwold}, K. and {Tagger}, M. and {Tang}, Y. and {Tasse}, C. and {Thomas}, I. and {Thoudam}, S. and {Toribio}, M.~C. and {van der Tol}, B. and {Usov}, O. and {van Veelen}, M. and {van der Veen}, A.-J. and {ter Veen}, S. and {Verbiest}, J.~P.~W. and {Vermeulen}, R. and {Vermaas}, N. and {Vocks}, C. and {Vogt}, C. and {de Vos}, M. and {van der Wal}, E. and {van Weeren}, R. and {Weggemans}, H. and {Weltevrede}, P. and {White}, S. and {Wijnholds}, S.~J. and {Wilhelmsson}, T. and {Wucknitz}, O. and {Yatawatta}, S. and {Zarka}, P. and {Zensus}, A. and {van Zwieten}, J.},
+	Doi = {10.1051/0004-6361/201220873},
+	Eid = {A2},
+	Eprint = {1305.3550},
+	Journal = {\aap},
+	Keywords = {instrumentation: interferometers, radio continuum: general, radio lines: general, dark ages, reionization, first stars, telescopes},
+	Month = aug,
+	Pages = {A2},
+	Primaryclass = {astro-ph.IM},
+	Title = {{LOFAR: The LOw-Frequency ARray}},
+	Volume = 556,
+	Year = 2013,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201220873}}
 
 @article{vanzuilen_et_al2002,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -18521,169 +18492,161 @@ archivePrefix = "arXiv",
 	Volume = 50,
 	Year = 1938}
 
-@ARTICLE{Guedel2002ARAA,
-   author = {{G{\"u}del}, M.},
-    title = "{Stellar Radio Astronomy: Probing Stellar Atmospheres from Protostars to Giants}",
-  journal = {\araa},
-   eprint = {astro-ph/0206436},
- keywords = {radio stars, coronae, stellar winds, high-energy particles, nonthermal radiation, magnetic fields},
-     year = 2002,
-   volume = 40,
-    pages = {217-261},
-      doi = {10.1146/annurev.astro.40.060401.093806},
-   adsurl = {http://adsabs.harvard.edu/abs/2002ARA%26A..40..217G},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Guedel2002ARAA,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2002ARA%26A..40..217G},
+	Author = {{G{\"u}del}, M.},
+	Doi = {10.1146/annurev.astro.40.060401.093806},
+	Eprint = {astro-ph/0206436},
+	Journal = {\araa},
+	Keywords = {radio stars, coronae, stellar winds, high-energy particles, nonthermal radiation, magnetic fields},
+	Pages = {217-261},
+	Title = {{Stellar Radio Astronomy: Probing Stellar Atmospheres from Protostars to Giants}},
+	Volume = 40,
+	Year = 2002,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1146/annurev.astro.40.060401.093806}}
 
-@ARTICLE{Lim1998,
-   author = {{Lim}, J. and {Carilli}, C.~L. and {White}, S.~M. and {Beasley}, A.~J. and 
-	{Marson}, R.~G.},
-    title = "{Large convection cells as the source of Betelgeuse's extended atmosphere}",
-  journal = {\nat},
-     year = 1998,
-    month = apr,
-   volume = 392,
-    pages = {575-577},
-      doi = {10.1038/33352},
-   adsurl = {http://adsabs.harvard.edu/abs/1998Natur.392..575L},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Lim1998,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1998Natur.392..575L},
+	Author = {{Lim}, J. and {Carilli}, C.~L. and {White}, S.~M. and {Beasley}, A.~J. and {Marson}, R.~G.},
+	Doi = {10.1038/33352},
+	Journal = {\nat},
+	Month = apr,
+	Pages = {575-577},
+	Title = {{Large convection cells as the source of Betelgeuse's extended atmosphere}},
+	Volume = 392,
+	Year = 1998,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/33352}}
 
 @article{Villadsen2014,
-  author={Jackie Villadsen and Gregg Hallinan and Stephen Bourke and Manuel Güdel and Michael Rupen},
-  title={First Detection of Thermal Radio Emission from Solar-type Stars with the Karl G. Jansky Very Large Array},
-  journal={The Astrophysical Journal},
-  volume={788},
-  number={2},
-  pages={112},
-  url={http://stacks.iop.org/0004-637X/788/i=2/a=112},
-  year={2014},
-  }
-  
-  @ARTICLE{Bastian1990,
-   author = {{Bastian}, T.~S.},
-    title = "{Radio emission from flare stars}",
-  journal = {\solphys},
- keywords = {Flare Stars, Radio Bursts, Solar Neighborhood, Stellar Spectra, Astronomical Spectroscopy, Continuous Radiation, Dwarf Stars, Solar Radio Emission, Spectrum Analysis, Star Clusters},
-     year = 1990,
-    month = dec,
-   volume = 130,
-    pages = {265-294},
-      doi = {10.1007/BF00156794},
-   adsurl = {http://adsabs.harvard.edu/abs/1990SoPh..130..265B},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+	Author = {Jackie Villadsen and Gregg Hallinan and Stephen Bourke and Manuel G{\"u}del and Michael Rupen},
+	Journal = {The Astrophysical Journal},
+	Number = {2},
+	Pages = {112},
+	Title = {First Detection of Thermal Radio Emission from Solar-type Stars with the Karl G. Jansky Very Large Array},
+	Url = {http://stacks.iop.org/0004-637X/788/i=2/a=112},
+	Volume = {788},
+	Year = {2014},
+	Bdsk-Url-1 = {http://stacks.iop.org/0004-637X/788/i=2/a=112}}
 
-@ARTICLE{Bastian1998,
-   author = {{Bastian}, T.~S. and {Benz}, A.~O. and {Gary}, D.~E.},
-    title = "{Radio Emission from Solar Flares}",
-  journal = {\araa},
-     year = 1998,
-   volume = 36,
-    pages = {131-188},
-      doi = {10.1146/annurev.astro.36.1.131},
-   adsurl = {http://adsabs.harvard.edu/abs/1998ARA%26A..36..131B},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Bastian1990,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1990SoPh..130..265B},
+	Author = {{Bastian}, T.~S.},
+	Doi = {10.1007/BF00156794},
+	Journal = {\solphys},
+	Keywords = {Flare Stars, Radio Bursts, Solar Neighborhood, Stellar Spectra, Astronomical Spectroscopy, Continuous Radiation, Dwarf Stars, Solar Radio Emission, Spectrum Analysis, Star Clusters},
+	Month = dec,
+	Pages = {265-294},
+	Title = {{Radio emission from flare stars}},
+	Volume = 130,
+	Year = 1990,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF00156794}}
 
-@ARTICLE{OGorman2013,
-   author = {{O'Gorman}, E. and {Harper}, G.~M. and {Brown}, A. and {Drake}, S. and 
-	{Richards}, A.~M.~S.},
-    title = "{Multi-wavelength Radio Continuum Emission Studies of Dust-free Red Giants}",
-  journal = {\aj},
-archivePrefix = "arXiv",
-   eprint = {1309.0860},
- primaryClass = "astro-ph.SR",
- keywords = {radio continuum: stars, stars: chromospheres, stars: individual: {$\alpha$} Boo {$\alpha$} Tau, stars: late-type, stars: winds, outflows},
-     year = 2013,
-    month = oct,
-   volume = 146,
-      eid = {98},
-    pages = {98},
-      doi = {10.1088/0004-6256/146/4/98},
-   adsurl = {http://adsabs.harvard.edu/abs/2013AJ....146...98O},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Bastian1998,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1998ARA%26A..36..131B},
+	Author = {{Bastian}, T.~S. and {Benz}, A.~O. and {Gary}, D.~E.},
+	Doi = {10.1146/annurev.astro.36.1.131},
+	Journal = {\araa},
+	Pages = {131-188},
+	Title = {{Radio Emission from Solar Flares}},
+	Volume = 36,
+	Year = 1998,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1146/annurev.astro.36.1.131}}
 
-@ARTICLE{Fix1976,
-   author = {{Fix}, J.~D. and {Spangler}, S.~R.},
-    title = "{A search for variable 430 MHz continuum emission from red giant stars.}",
-  journal = {\apj},
-     year = 1976,
-    month = oct,
-   volume = 209,
-    pages = {503-504},
-      doi = {10.1086/154744},
-   adsurl = {http://adsabs.harvard.edu/abs/1976ApJ...209..503F},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{OGorman2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013AJ....146...98O},
+	Archiveprefix = {arXiv},
+	Author = {{O'Gorman}, E. and {Harper}, G.~M. and {Brown}, A. and {Drake}, S. and {Richards}, A.~M.~S.},
+	Doi = {10.1088/0004-6256/146/4/98},
+	Eid = {98},
+	Eprint = {1309.0860},
+	Journal = {\aj},
+	Keywords = {radio continuum: stars, stars: chromospheres, stars: individual: {$\alpha$} Boo {$\alpha$} Tau, stars: late-type, stars: winds, outflows},
+	Month = oct,
+	Pages = {98},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Multi-wavelength Radio Continuum Emission Studies of Dust-free Red Giants}},
+	Volume = 146,
+	Year = 2013,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-6256/146/4/98}}
 
-@ARTICLE{Beasley1992,
-   author = {{Beasley}, A.~J. and {Stewart}, R.~T. and {Carter}, B.~D.},
-    title = "{Non-thermal radio emission from post-main-sequence stars}",
-  journal = {\mnras},
- keywords = {Main Sequence Stars, Nonthermal Radiation, Radio Emission, Radio Sources (Astronomy), Radio Spectra, Stellar Activity, Giant Stars, Stellar Magnetic Fields},
-     year = 1992,
-    month = jan,
-   volume = 254,
-    pages = {1-6},
-   adsurl = {http://adsabs.harvard.edu/abs/1992MNRAS.254....1B},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Fix1976,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1976ApJ...209..503F},
+	Author = {{Fix}, J.~D. and {Spangler}, S.~R.},
+	Doi = {10.1086/154744},
+	Journal = {\apj},
+	Month = oct,
+	Pages = {503-504},
+	Title = {{A search for variable 430 MHz continuum emission from red giant stars.}},
+	Volume = 209,
+	Year = 1976,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/154744}}
 
-@ARTICLE{vandenOord1994,
-   author = {{van den Oord}, G.~H.~J. and {de Bruyn}, A.~G.},
-    title = "{Unusual flares at 360 and 609 MHz in the RS Canum Venaticorum-system II Pegasi observed with the WSRT: coherent emission from II Pegasi}",
-  journal = {\aap},
- keywords = {STARS: MAGNETIC FIELDS, STARS: CLOSE BINARIES, STARS: CORONAE, STARS: FLARE, STARS: INDIVIDUAL: II PEG, RADIO CONTINUUM: STARS},
-     year = 1994,
-    month = jun,
-   volume = 286,
-    pages = {181-193},
-   adsurl = {http://adsabs.harvard.edu/abs/1994A%26A...286..181V},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Beasley1992,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1992MNRAS.254....1B},
+	Author = {{Beasley}, A.~J. and {Stewart}, R.~T. and {Carter}, B.~D.},
+	Journal = {\mnras},
+	Keywords = {Main Sequence Stars, Nonthermal Radiation, Radio Emission, Radio Sources (Astronomy), Radio Spectra, Stellar Activity, Giant Stars, Stellar Magnetic Fields},
+	Month = jan,
+	Pages = {1-6},
+	Title = {{Non-thermal radio emission from post-main-sequence stars}},
+	Volume = 254,
+	Year = 1992}
 
-@ARTICLE{Skinner1997,
-   author = {{Skinner}, C.~J. and {Dougherty}, S.~M. and {Meixner}, M. and 
-	{Bode}, M.~F. and {Davis}, R.~J. and {Drake}, S.~A. and {Arens}, J.~F. and 
-	{Jernigan}, J.~G.},
-    title = "{Circumstellar environments - V. The asymmetric chromosphere and dust shell of alpha Orionis}",
-  journal = {\mnras},
- keywords = {STARS: CHROMOSPHERES, CIRCUMSTELLAR MATTER, STARS: INDIVIDUAL: ALPHA ORI, SUPERGIANTS, INFRARED: STARS},
-     year = 1997,
-    month = jun,
-   volume = 288,
-    pages = {295-306},
-   adsurl = {http://adsabs.harvard.edu/abs/1997MNRAS.288..295S},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{vandenOord1994,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1994A%26A...286..181V},
+	Author = {{van den Oord}, G.~H.~J. and {de Bruyn}, A.~G.},
+	Journal = {\aap},
+	Keywords = {STARS: MAGNETIC FIELDS, STARS: CLOSE BINARIES, STARS: CORONAE, STARS: FLARE, STARS: INDIVIDUAL: II PEG, RADIO CONTINUUM: STARS},
+	Month = jun,
+	Pages = {181-193},
+	Title = {{Unusual flares at 360 and 609 MHz in the RS Canum Venaticorum-system II Pegasi observed with the WSRT: coherent emission from II Pegasi}},
+	Volume = 286,
+	Year = 1994}
 
-@ARTICLE{Knapp1995,
-   author = {{Knapp}, G.~R. and {Bowers}, P.~F. and {Young}, K. and {Phillips}, T.~G.
-	},
-    title = "{Radio-Frequency Continuum Emission from Evolved Stars}",
-  journal = {\apj},
- keywords = {RADIO CONTINUUM: STARS, ISM: PLANETARY NEBULAE: INDIVIDUAL ALPHANUMERIC: CRL 915, ISM: PLANETARY NEBULAE: INDIVIDUAL ALPHANUMERIC: IRAS 17423-1755, STARS: AGB AND POST-AGB, STARS: EVOLUTION, STARS: MASS LOSS},
-     year = 1995,
-    month = dec,
-   volume = 455,
-    pages = {293},
-      doi = {10.1086/176577},
-   adsurl = {http://adsabs.harvard.edu/abs/1995ApJ...455..293K},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Skinner1997,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1997MNRAS.288..295S},
+	Author = {{Skinner}, C.~J. and {Dougherty}, S.~M. and {Meixner}, M. and {Bode}, M.~F. and {Davis}, R.~J. and {Drake}, S.~A. and {Arens}, J.~F. and {Jernigan}, J.~G.},
+	Journal = {\mnras},
+	Keywords = {STARS: CHROMOSPHERES, CIRCUMSTELLAR MATTER, STARS: INDIVIDUAL: ALPHA ORI, SUPERGIANTS, INFRARED: STARS},
+	Month = jun,
+	Pages = {295-306},
+	Title = {{Circumstellar environments - V. The asymmetric chromosphere and dust shell of alpha Orionis}},
+	Volume = 288,
+	Year = 1997}
 
-@ARTICLE{Newell1982,
-   author = {{Newell}, R.~T. and {Hjellming}, R.~M.},
-    title = "{Radio emission from the extended chromosphere of Alpha Orionis}",
-  journal = {\apjl},
- keywords = {Chromosphere, Radio Emission, Red Giant Stars, Stellar Envelopes, Stellar Mass Ejection, Supergiant Stars, Late Stars, Orion Constellation, Radio Spectra, Spectrum Analysis, Stellar Radiation, Stellar Winds},
-     year = 1982,
-    month = dec,
-   volume = 263,
-    pages = {L85-L87},
-      doi = {10.1086/183929},
-   adsurl = {http://adsabs.harvard.edu/abs/1982ApJ...263L..85N},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
+@article{Knapp1995,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1995ApJ...455..293K},
+	Author = {{Knapp}, G.~R. and {Bowers}, P.~F. and {Young}, K. and {Phillips}, T.~G.},
+	Doi = {10.1086/176577},
+	Journal = {\apj},
+	Keywords = {RADIO CONTINUUM: STARS, ISM: PLANETARY NEBULAE: INDIVIDUAL ALPHANUMERIC: CRL 915, ISM: PLANETARY NEBULAE: INDIVIDUAL ALPHANUMERIC: IRAS 17423-1755, STARS: AGB AND POST-AGB, STARS: EVOLUTION, STARS: MASS LOSS},
+	Month = dec,
+	Pages = {293},
+	Title = {{Radio-Frequency Continuum Emission from Evolved Stars}},
+	Volume = 455,
+	Year = 1995,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/176577}}
+
+@article{Newell1982,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1982ApJ...263L..85N},
+	Author = {{Newell}, R.~T. and {Hjellming}, R.~M.},
+	Doi = {10.1086/183929},
+	Journal = {\apjl},
+	Keywords = {Chromosphere, Radio Emission, Red Giant Stars, Stellar Envelopes, Stellar Mass Ejection, Supergiant Stars, Late Stars, Orion Constellation, Radio Spectra, Spectrum Analysis, Stellar Radiation, Stellar Winds},
+	Month = dec,
+	Pages = {L85-L87},
+	Title = {{Radio emission from the extended chromosphere of Alpha Orionis}},
+	Volume = 263,
+	Year = 1982,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/183929}}
