--- a/ms.tex
+++ b/ms.tex
@@ -957,6 +957,157 @@ We caution that these assumptions are optimistic, and the time estimates could i
 be a factor of a few worse.
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\memoYF{--- how about the following? ---}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\begin{center}
+\begin{deluxetable*}{cccccc}
+\tabletypesize{\scriptsize}
+\tablecolumns{6}
+\tablecaption{Detectability of Hot Jupiters with Current 
+and Future Radio Telescopes.\label{tab:sens}}
+\tablehead{
+Instrument & Band  & Sensitivity\tablenotemark{a} & $\tau$\tablenotemark{b}  & Resolution & $\sigma_c$\tablenotemark{c}\\
+           & (MHz) & ($\mu$Jy~hr$^{1/2}$)         &  (hr)                    & (\arcsec)  & ($\mu$Jy bm$^{-1}$)} 
+\startdata
+LOFAR-LBA  &  30-80  & 700   & 122500             & 8.3  & 42 \\ 
+LOFAR-HBA  & 110-200 &  35   &    300             & 3.3  & 1.1 \\  
+HERA       &  30-80  & 870   & 190000             & 1030 & 4.2$\times10^5$\\ 
+GMRT       & 130-190 & 430   &  46000             & 16.5 & 56.9 \\ 
+%LWA        &  30-80  & 53000 &  3.2$\times10^6$ & 10.3 & 211 \\
+%MWA        &  30-80  & 27000 &  8.1$\times10^5$ & 1030 & $2.1\times10^6$ \\
+SKA-Low (part) & 50-200 & 7.8 &  15           & 7.8  & 9.7 \\
+SKA-Low (full) & 50-350 & 2.2 &  1.2          & 2.2  & 1.5 \\
+%VLA 4-Band & 30-80   & 3300  & 1100             & 28.6 & 330 \\
+VLA-LOBO   &  50-350 &  92   &  2100              & 8.6  & 10
+\enddata
+%\tablecomments{Time estimates to reach 2~$\mu$Jy RMS.}
+\tablenotetext{a}{RMS noise in a 1-hour observation, computed for imaging of the full band reported in this table.}
+\tablenotetext{b}{The integration time in hours required to reach an RMS of 2~$\mu$Jy (i.e.\ 5-$\sigma$ detection
+of a typical source with 10~$\mu$Jy bm$^{-1}$ average flux)}
+\tablenotetext{c}{Source confusion limit RMS contribution.}
+\end{deluxetable*}
+%\end{center}
+
+% HERA
+% http://reionization.org/wp-content/uploads/2015/05/HERA0_imaging.pdf
+%
+% LOFAR
+% https://www.astron.nl/~heald/test/sens.php; 
+% 24 core stations, 16 remote, 8 international, 488 subbands
+%
+% GMRT
+% http://gmrt.ncra.tifr.res.in/~astrosupp/obs_setup/sensitivity.html
+% 
+
+We consider in this section several current and near future radio observatories that 
+operate at frequencies $\nu \lesssim 350~\rm MHz$ and can reach continuum 
+sensitivities less than 1~mJy in a few hours.  The results are summarized
+in Table~\ref{tab:sens}. 
+
+The primary limitations to detectability are the noise characterized by the root mean square (RMS) of the sky background, and source confusion, i.e., the noise associated with other radio sources in the beam. \memoYF{Is this right? If not, please correct. }
+
+The RMS noise, ${\sigma}_{\rm RMS}$, in an interferometric observation, 
+integration time $\tau$, bandwidth $\Delta \nu$, effective area $A_{\rm eff}$ 
+($\approx0.7 \pi (D/2)^2$ for interferometers comprising antennas with dish size $D$),
+and $N$ elements is \citep[see e.g.][]{condon+ransom2016}
+%%%
+\begin{equation}
+\sigma_{\rm RMS} = \frac{2 k T_{\rm sys}}{A_{\rm eff} \, \sqrt{\Delta \nu \, \tau N (N-1)}} 
+\left(\frac{\rm 10^{26} Jy}{\rm W m^{-2} Hz^{-1}}\right)
+\end{equation}
+%%%
+We compute $T_{\rm sys} = T_{\rm rx}+ T_{\rm sky}$ using the low frequency sky 
+noise temperature fit from \cite{Rogers+Bowman2008}:
+%%%
+\begin{equation}
+T_{\rm sky} = T_{150} \left( \frac{\nu}{150~\rm MHz}\right)^{-\beta} + T_{\rm CMB} 
+\end{equation}
+%%%
+where $T_{150} = 283.2~\rm K$ is the $T_{\rm sky}$ at 150~MHz, $\beta=2.47$,
+and $T_{\rm CMB} = 2.73~\rm K$ is the contribution from the cosmic microwave 
+background (CMB).
+While this relation was fit to data taken in the 100-200~MHz range, the authors
+found it to be consistent with published measurements from 10-408~MHz. 
+
+The confusion limit, $\sigma_c$, is defined as the standard deviation of the background radio sources. \memoYF{give me better explanation... } 
+To estimate $\sigma_c$ (in mJy beam$^{-1}$) reported in Table~\ref{tab:sens}, 
+we use the relations provided by \cite{condon+ransom2016}, reproduced below:
+%%%
+\begin{eqnarray}
+\sigma_c & \approx & 0.2 \left( \frac{\nu}{1 \rm~GHz} \right)^{-0.7} \left( \frac{\theta}{1\arcmin} \right)^2\!\!\!\!,~(\theta > 10\arcsec) \\
+\sigma_c & \approx & 2.2 \left( \frac{\nu}{1 \rm~GHz} \right)^{-0.7} \left( \frac{\theta}{1\arcmin} \right)^{10/3}\!\!\!\!\!\!\!\!\!\!,~(\theta < 10\arcsec).
+\end{eqnarray}
+%%%
+The source confusion limit is dominated by active galactic nuclei, which have low polarization fractions $\lesssim2.5\%$ \citep{Stil2014} and slowly vary with time \citep{Condon1974,Condon2012}. 
+Therefore both the circularly polarized nature of the emission from hot Jupiters 
+and the time variability (discussed in \S\ref{ss:timevariability}) partially mitigate 
+the source confusion limit, allowing hot Jupiters, like other time-variable sources,
+to be detected below the imaging confusion limit.
+
+% LOFAR
+The LOw-Frequency ARray (LOFAR) operates as two separate arrays defined by their 
+high and low bands, differing configurations, and antenna designs, which
+are called respectively the Low Band Antennas (LBA) and High Band Antennas (HBA).  
+LOFAR-LBA operates in the 10-90~MHz range, and LOFAR-HBA operates in the 
+100-240~MHz range \citep{vanHaarlem2013}.  We consider it as two separate
+instruments here.
+LOFAR-LBA's most sensitive band is centered at 60~MHz, and LOFAR-HBA's is at 150~MHz. 
+Given the strong frequency dependence of
+the effective aperture of a dipole antenna, and that the system noise temperature 
+$T_{\rm sys}$ for LOFAR is not fully determined by the sky noise $T_{\rm sky}$, 
+we use the LOFAR Image Noise calculator\footnote{
+Heald; \url{http://www.astron.nl/~heald/test/sens.php}}, which 
+is based on {\it SKA Memo 113}\footnote{
+Nijboer, Pandey-Pommier, \& de Bruyn; 
+\url{http://www.skatelescope.org/uploaded/59513\_113\_Memo\_Nijboer.pdf}}, for
+our fiducial sensitivity and imaging parameters in Table~\ref{tab:sens}.
+
+% HERA
+The Hydrogen Epoch of Reionization Array (HERA\footnote{
+\url{http://reionization.org/}}) \ldots 
+
+% GMRT
+The Giant Metre-wave Radio Telescope (GMRT) is an array comprising thirty 
+25-meter antennas, operating at frequencies 130-2000~MHz. The lowest
+band (130-190~MHz) exhibits receiver noise $T_{\rm rx}$ comparable to the sky noise.
+To be conservative, we use the GMRT online calculator.\footnote{
+\url{http://gmrt.ncra.tifr.res.in/~astrosupp/obs\_setup/sensitivity.html}
+}
+
+% VLA
+For the low frequency receivers (28-80~MHz; 4-Band) in the % Long Wavelength Array (LWA) and the 
+Very Large Array (VLA), the receiver noise temperature $T_{\rm rx}\approx 260~\rm K$ 
+\citep{Hicks2012} and is subdominant to $T_{\rm sky}$ by at least -6~dB.  Future
+upgrades to the VLA such as the LOw Band Observatory \citep[LOBO][]{Kassim2015IAU},
+We estimate the sensitivity of LOBO assuming the receiver noise extrapolates linearly
+from $T_{\rm rx}\approx 60~\rm K$ (internal VLA memo) in P-Band (230-470~MHz) to
+$T_{\rm rx}\approx 260~\rm K$ in 4-band, and consider just the 50-350~MHz portion
+of the full 30-470~MHz band.
+
+% SKA
+The low frequency component of the  Square Kilometer Array (SKA), recently rebaselined 
+to have 0.4~km$^2$ collecting area in 130,000 elements with baselines extending
+to 65~km, will operate from 50-350~MHz.\footnote{
+\url{https://www.skatelescope.org/news/worlds-largest-radio-telescope-near-construction/}}
+We estimate the noise in the lower half of the band ($\nu<200~\rm MHz$), appropriate
+for lower mass ($\lesssim 10 M_J$) separately from the full band, which could be used
+to detect $\sim 30 M_J$ hot Jupiters.
+We adopt the \cite{Rogers+Bowman2008} relation for $T_{\rm sys}$ as above, and assume
+$T_{\rm rx}\approx 60~\rm K$.
+We caution that these assumptions are optimistic, and the time estimates could in reality 
+be a factor of a few worse.
+
+
+The estimates of the noises shown in Table \ref{tab:sens}, together with Figure \ref{fig:observability}, indicate that, at the frequency relevant to the radio emission from Jupiter-size planets,  the sensitivity is too low to detect them (LOFAR-LBA, HERA). 
+On the other hand, for more massive exoplanets ($M_p\sim 10 M_J$) where the bulk of the radio emission would exist above 50 MHz, there is hope to detect radio emission from nearby systems. 
+LOFAR-HBA has reasonable sensitivity to $M_p =10M_p$ planets at 5 AU around a few closest systems as well as those around further stars but orbiting closer to the stars. 
+More promising is SKA, which will be able to detect the signal, within 1 day, from a planet with $M_p =10M_p$ at 5 AU around M stars within 100 pc, 
+
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Discriminating from Background:\\Time Variability}
 \label{ss:timevariability}
@@ -986,8 +1137,6 @@ If the planetary orbit is close to the edge-on configuration, the radio emission
 \section{Discussion}
 \label{s:discussion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 
 
 
