in Section 4.3, the order of descriptions for SKA and VLA are switched in order to be consistent with the Table

--- a/ms.tex
+++ b/ms.tex
@@ -1030,6 +1030,7 @@ and $T_{\rm CMB} = 2.73~\rm K$ is the contribution from the cosmic microwave
 background (CMB).
 While this relation was fit to data taken in the 100-200~MHz range, the authors
 found it to be consistent with published measurements from 10-408~MHz. 
+The $T_{\rm rx}$ is the receiver noise temperature, which depends on the instruments and described below. 
 
 The confusion limit, $\sigma_c$, is defined as the standard deviation of the background radio sources. \memoYF{give me better explanation... } 
 To estimate $\sigma_c$ (in mJy beam$^{-1}$) reported in Table~\ref{tab:sens}, 
@@ -1076,15 +1077,6 @@ To be conservative, we use the GMRT online calculator.\footnote{
 \url{http://gmrt.ncra.tifr.res.in/~astrosupp/obs\_setup/sensitivity.html}
 }
 
-% VLA
-For the low frequency receivers (28-80~MHz; 4-Band) in the % Long Wavelength Array (LWA) and the 
-Very Large Array (VLA), the receiver noise temperature $T_{\rm rx}\approx 260~\rm K$ 
-\citep{Hicks2012} and is subdominant to $T_{\rm sky}$ by at least -6~dB.  Future
-upgrades to the VLA such as the LOw Band Observatory \citep[LOBO][]{Kassim2015IAU},
-We estimate the sensitivity of LOBO assuming the receiver noise extrapolates linearly
-from $T_{\rm rx}\approx 60~\rm K$ (internal VLA memo) in P-Band (230-470~MHz) to
-$T_{\rm rx}\approx 260~\rm K$ in 4-band, and consider just the 50-350~MHz portion
-of the full 30-470~MHz band.
 
 % SKA
 The low frequency component of the  Square Kilometer Array (SKA), recently rebaselined 
@@ -1098,6 +1090,16 @@ We adopt the \cite{Rogers+Bowman2008} relation for $T_{\rm sys}$ as above, and a
 $T_{\rm rx}\approx 60~\rm K$.
 We caution that these assumptions are optimistic, and the time estimates could in reality 
 be a factor of a few worse.
+
+% VLA
+For the low frequency receivers (28-80~MHz; 4-Band) in the % Long Wavelength Array (LWA) and the 
+Very Large Array (VLA), the receiver noise temperature $T_{\rm rx}\approx 260~\rm K$ 
+\citep{Hicks2012} and is subdominant to $T_{\rm sky}$ by at least -6~dB.  Future
+upgrades to the VLA such as the LOw Band Observatory \citep[LOBO][]{Kassim2015IAU},
+We estimate the sensitivity of LOBO assuming the receiver noise extrapolates linearly
+from $T_{\rm rx}\approx 60~\rm K$ (internal VLA memo) in P-Band (230-470~MHz) to
+$T_{\rm rx}\approx 260~\rm K$ in 4-band, and consider just the 50-350~MHz portion
+of the full 30-470~MHz band.
 
 
 The estimates of the noises shown in Table \ref{tab:sens}, together with Figure \ref{fig:observability}, indicate that, at the frequency relevant to the radio emission from Jupiter-size planets,  the sensitivity is too low to detect them (LOFAR-LBA, HERA). 
